k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deniskachar-com-service
  annotations:
    cloud.google.com/backend-config: '{"default": "deniskachar-backendconfig"}'
spec:
  selector:
    app: helloworld
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
